# cstl

./: CMakeLists.txt
include/std/: allocator.h  array.h  clib_allocator.h  container.h  defines.h  glue_macro.h  gnu_attributes.h  iterator.h  list.h
include/std/algorithm/: count.h  fill.h  filter.h  reduce.h  transform.h
include/std/la/: vector_op.h
include/std/old/: container.h  container_base.h  containers_for_type.h
test/: CMakeLists.txt  test_array.c  test_count.c  test_fill.c  test_la_vec_ops.c  test_list.c  test_reduce.c
